# lfdata

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  pytest_report.txt  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  video_config_example.yaml
.github/workflows/: build.yml
design/: gametype-sm5.md  lfdata_ui.md  tdf-files.md  video.md
docs/: usage.md
src/lfdata/: __init__.py  __main__.py
src/lfdata/importer/: __init__.py  normalizer.py  tdf.py
src/lfdata/model/: __init__.py  base.py  event.py  game.py  player.py
src/lfdata/model/constants/: centre.py  color.py  role.py  team_type.py
src/lfdata/model/gametypes/: sm5_stats.py
src/lfdata/model/objects/: entity.py  event.py  game.py  player.py  score_history.py  state_history.py  team.py
src/lfdata/replay/: __init__.py  handlers.py  record.py  replay.py  state.py
src/lfdata/storage/: __init__.py
src/lfdata/ui/: __init__.py  __main__.py  animation_overview.py  app.py  canvas.py  config_manager.py  preview.py  properties.py
src/lfdata/video/: __init__.py  element.py  generator.py  helpers.py  renderer.py
tests/: __init__.py  test_base.py  test_centre.py  test_color.py  test_element.py  test_entity.py  test_event.py  test_game.py  test_generator.py  test_handlers.py  test_helpers.py  test_importer.py  test_main.py  test_normalizer.py  test_player.py  test_pregame_delay.py  test_record.py  test_renderer.py  test_replay.py  test_role.py  test_score_history.py  test_sm5_stats.py  test_state.py  test_state_history.py  test_storage.py  test_tdf.py  test_team.py  test_team_type.py  test_ui_animation_overview.py  test_ui_app.py  test_ui_canvas.py  test_ui_config_manager.py  test_ui_preview.py  test_ui_properties.py  test_video.py
